# sistema-controle-acesso

./: .gitignore  README.md  main.py  pyproject.toml
estruturas/: lista_usuarios.py
models/: arquivo.py  no_usuario.py  usuario.py
seguranca/: autenticacao.py  permissoes.py
services/: sistema_acesso.py
