[project]
dependencies = []
description = ""
name = "sistema-controle-acesso"
readme = "README.md"
requires-python = ">=3.14.0"
version = "0.1.0"
# =========================================================================== #
#                            Build e Setuptools                               #
# =========================================================================== #
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-cov>=7.1.0", "ruff>=0.15.20", "taskipy>=1.14.1", "ty>=0.0.55"]

[tool.uv]
package = true
# =========================================================================== #
#                          Lint e formatação (Ruff)                           #
# =========================================================================== #
[tool.ruff]
fix = true
indent-width = 4
line-length = 120
show-fixes = true
target-version = "py314"

[tool.ruff.lint]
ignore = ["COM812", "D100", "D101", "D102", "D103", "D104", "D107", "D203", "D213", "D413", "DTZ011", "ERA001", "T201"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

# [tool.ruff.lint.isort]
# known-first-party = ["sistema-controle-acesso"]
# =========================================================================== #
#                              Testes (Pytest)                                #
# =========================================================================== #
[tool.pytest.ini_options]
addopts = """
-s
-x
--color=yes
--tb=short
--cov=.
--cov-report=term-missing
--cov-report=html
--cov-fail-under=60
"""
pythonpath = ["."]
testpaths = ["tests"]
# =========================================================================== #
#                                 Tipagem (Ty)                                #
# =========================================================================== #
[tool.ty]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
all = "error"

[[tool.ty.overrides]]
include = ["tests"]

[tool.ty.overrides.rules]
all = "warn"
# =========================================================================== #
#                              Tasks (TaskiPy)                                #
# =========================================================================== #
[tool.taskipy.tasks]
check = "task lint && task type && task test"
format = "ruff format ."
lint = "ruff check ."
post_test = "coverage html"
pre_format = "ruff check . --fix"
pre_test = "task lint"
test = "pytest -s -x --cov=. -vv"
testx = "pytest -v -s --color=yes --tb=short"
type = "ty check ."
